# agent-secret-hub

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent-secret-hub/: .gitignore  README.md  docker-compose.yml  requirements.txt
agent-secret-hub/app/: main.py  models.py
agent-secret-hub/app/routes/: secret.py
agent-secret-hub/app/services/: audit.py  auth.py  permissions.py  secrets.py
agent-secret-hub/cli/: main.py
agent-secret-hub/scripts/: install-client-from-github.sh  install-client.sh  install-server-from-github.sh
agent_secret_cli/: main.py
app/: db.py  main.py  models.py
app/routes/: device.py  secret.py  sync.py
app/services/: secrets.py
app/utils/: client_ip.py
cli/: main.py
scripts/: check-version.sh  install-client-from-github.ps1  install-client-from-github.sh  install-client.ps1  install-client.sh  install-server-from-github.sh  install-server.sh  mcp_server.py  start.sh
skills/: agent-secret-auto.md  agent-secret-hub.md
