[project]
name = "agent-secret-hub"
version = "0.1.0"
description = "Personal multi-device Agent Secret Hub"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.35.0",
  "psycopg[binary]>=3.2.10",
  "psycopg-pool>=3.2.0",
  "typer>=0.21.1",
  "httpx>=0.28.0",
]

[project.scripts]
agent-secret = "agent_secret_cli.main:app"

[tool.setuptools]
packages = ["app", "app.routes", "app.services", "app.utils", "agent_secret_cli"]

